mask openapi key

--- a/AGV_planing_agent_finial_version_.ipynb
+++ b/AGV_planing_agent_finial_version_.ipynb
@@ -1213,7 +1213,7 @@
         "    chromadb.config = types.SimpleNamespace(Settings=chromadb.Settings)\n",
         "\n",
         "# --- 🔑 Enter your API key ---\n",
-        "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+        "os.environ[\"OPENAI_API_KEY\"] = \"sd"\n",
         "\n",
         "\n",
         "# ============================================================\n",
