Replace hard-coded API key with environment variable

--- a/Q&A_LLM_Orginal.ipynb
+++ b/Q&A_LLM_Orginal.ipynb
@@ -20,7 +20,7 @@
         "from openai import OpenAI\n",
         "\n",
         "# Use env var instead of hard-coding the key\n",
-        "client = OpenAI(api_key=\"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\")\n",
+        "client = OpenAI(api_key=\" fff")\n",
         "\n"
       ],
       "metadata": {
